<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/trackTrainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_your_train"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pnrInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pnr_number"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/trackTrainTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/checkStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_status"
        app:layout_constraintTop_toBottomOf="@id/pnrInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/statusOutput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/train_status_will_appear_here"
        app:layout_constraintTop_toBottomOf="@id/checkStatusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>