<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/passengerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    >

    <TextView
        android:id="@+id/textViewPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_pnr_number"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/pnr_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pnr_number"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonSubmitPNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:backgroundTint="#1976D2"
        android:textColor="#FFFFFF" />


</LinearLayout>